Fixed mobile placeholder on search field size sticking out under the search button

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -98,3 +98,9 @@ div > i {
     content: "\f002";
     font-family: FontAwesome;
 }
+
+@media only screen and (max-width: 320px) {
+  form > input {
+    font-size: 13px;
+  }
+}
